# DriftWatcher

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: CHANGELOG.md  COMMANDS.md  INSTALL.md  QUICKSTART.md  TROUBLESHOOTING.md
drift-watcher-chrome-extension/: CHANGELOG.md  README.md  background.js  content.js  manifest.json
drift_watcher/: __init__.py  cli.py  config.default.json  config.examples.json  config.py
drift_watcher/core/: __init__.py  agent.py  state_manager.py
drift_watcher/dashboard/: dashboard.css  dashboard.js  index.html
drift_watcher/llm/: __init__.py  base.py  bedrock_client.py  ollama_client.py  reasoner.py
drift_watcher/tracking/: __init__.py  __main__.py  activity_processor.py  event_reader.py  server.py
drift_watcher/utils/: notifier.py
examples/: custom_provider.py
